--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,8 +12,8 @@
 
 <!-- Bootstrap: latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
 <link rel="stylesheet" type="text/css" href="{{ "css/PerthStJohns.css" | absURL }}">
+<link rel="canonical" href="{{ .Permalink }}" />
 
 <!-- Favicons (thanks RealFaviconGenerator.net) -->
 <link rel="apple-touch-icon" sizes="180x180" href='{{ absURL "apple-touch-icon.png" }}'>
